hphp/test/zend/good/tests/classes/autoload/autoload_002.php
<?hh
<<__EntryPoint>>
function entrypoint_autoload_002(): void {

  var_dump(get_class_methods('autoload_root'));

  echo "===DONE===\n";
}
